preprocessing done. NEXT: pca on sagemaker

--- a/Population_Segmentation/Pop_Segmentation_Exercise.ipynb
+++ b/Population_Segmentation/Pop_Segmentation_Exercise.ipynb
@@ -174,12 +174,12 @@
     {
      "data": {
       "text/plain": [
-       "{'ResponseMetadata': {'RequestId': 'WV6FAX3KH5ZPNC71',\n",
-       "  'HostId': '0XdEQe7XRIelRHvuwW4OUsDEA0P6oEiZQxNpO5X+bfwrQEpoMkWSLeR3pfuaHDy66mrbjIcdQa0=',\n",
+       "{'ResponseMetadata': {'RequestId': '8MKGDBPE61QS0CVY',\n",
+       "  'HostId': 'MAdEhVUmXrHBOHIuHejITcXA/Rv2sgrxr6KoDO7tnrjYWL1GNZW6pYDJTIjJYHRd15782ZxPTKo=',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amz-id-2': '0XdEQe7XRIelRHvuwW4OUsDEA0P6oEiZQxNpO5X+bfwrQEpoMkWSLeR3pfuaHDy66mrbjIcdQa0=',\n",
-       "   'x-amz-request-id': 'WV6FAX3KH5ZPNC71',\n",
-       "   'date': 'Tue, 31 Aug 2021 17:16:04 GMT',\n",
+       "  'HTTPHeaders': {'x-amz-id-2': 'MAdEhVUmXrHBOHIuHejITcXA/Rv2sgrxr6KoDO7tnrjYWL1GNZW6pYDJTIjJYHRd15782ZxPTKo=',\n",
+       "   'x-amz-request-id': '8MKGDBPE61QS0CVY',\n",
+       "   'date': 'Fri, 03 Sep 2021 05:15:20 GMT',\n",
        "   'last-modified': 'Wed, 12 Sep 2018 15:13:37 GMT',\n",
        "   'etag': '\"066d37f43f7762f1eb409b1660fe9763\"',\n",
        "   'accept-ranges': 'bytes',\n",
@@ -193,7 +193,7 @@
        " 'ETag': '\"066d37f43f7762f1eb409b1660fe9763\"',\n",
        " 'ContentType': 'text/csv',\n",
        " 'Metadata': {},\n",
-       " 'Body': <botocore.response.StreamingBody at 0x11f6b23a0>}"
+       " 'Body': <botocore.response.StreamingBody at 0x1233013a0>}"
       ]
      },
      "metadata": {},
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +720,7 @@
        "[3 rows x 37 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +882,7 @@
        "[3 rows x 34 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {
     "nbpresent": {
      "id": "7e847244-7b42-490f-8945-46e234a3af75"
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1149,15 +1149,235 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TotalPop</th>\n",
+       "      <th>Men</th>\n",
+       "      <th>Women</th>\n",
+       "      <th>Hispanic</th>\n",
+       "      <th>White</th>\n",
+       "      <th>Black</th>\n",
+       "      <th>Native</th>\n",
+       "      <th>Asian</th>\n",
+       "      <th>Pacific</th>\n",
+       "      <th>Citizen</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Walk</th>\n",
+       "      <th>OtherTransp</th>\n",
+       "      <th>WorkAtHome</th>\n",
+       "      <th>MeanCommute</th>\n",
+       "      <th>Employed</th>\n",
+       "      <th>PrivateWork</th>\n",
+       "      <th>PublicWork</th>\n",
+       "      <th>SelfEmployed</th>\n",
+       "      <th>FamilyWork</th>\n",
+       "      <th>Unemployment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Alabama-Autauga</th>\n",
+       "      <td>0.005475</td>\n",
+       "      <td>0.005381</td>\n",
+       "      <td>0.005566</td>\n",
+       "      <td>0.026026</td>\n",
+       "      <td>0.759519</td>\n",
+       "      <td>0.215367</td>\n",
+       "      <td>0.004343</td>\n",
+       "      <td>0.024038</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.006702</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.007022</td>\n",
+       "      <td>0.033248</td>\n",
+       "      <td>0.048387</td>\n",
+       "      <td>0.552430</td>\n",
+       "      <td>0.005139</td>\n",
+       "      <td>0.750000</td>\n",
+       "      <td>0.250000</td>\n",
+       "      <td>0.150273</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.208219</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alabama-Baldwin</th>\n",
+       "      <td>0.019411</td>\n",
+       "      <td>0.019246</td>\n",
+       "      <td>0.019572</td>\n",
+       "      <td>0.045045</td>\n",
+       "      <td>0.832665</td>\n",
+       "      <td>0.110594</td>\n",
+       "      <td>0.006515</td>\n",
+       "      <td>0.016827</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.024393</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.014045</td>\n",
+       "      <td>0.035806</td>\n",
+       "      <td>0.104839</td>\n",
+       "      <td>0.549872</td>\n",
+       "      <td>0.018507</td>\n",
+       "      <td>0.884354</td>\n",
+       "      <td>0.107616</td>\n",
+       "      <td>0.158470</td>\n",
+       "      <td>0.040816</td>\n",
+       "      <td>0.205479</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alabama-Barbour</th>\n",
+       "      <td>0.002656</td>\n",
+       "      <td>0.002904</td>\n",
+       "      <td>0.002416</td>\n",
+       "      <td>0.046046</td>\n",
+       "      <td>0.462926</td>\n",
+       "      <td>0.543655</td>\n",
+       "      <td>0.002172</td>\n",
+       "      <td>0.009615</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.003393</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.025281</td>\n",
+       "      <td>0.038363</td>\n",
+       "      <td>0.043011</td>\n",
+       "      <td>0.491049</td>\n",
+       "      <td>0.001819</td>\n",
+       "      <td>0.719388</td>\n",
+       "      <td>0.248344</td>\n",
+       "      <td>0.199454</td>\n",
+       "      <td>0.010204</td>\n",
+       "      <td>0.482192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alabama-Bibb</th>\n",
+       "      <td>0.002225</td>\n",
+       "      <td>0.002414</td>\n",
+       "      <td>0.002042</td>\n",
+       "      <td>0.022022</td>\n",
+       "      <td>0.746493</td>\n",
+       "      <td>0.249127</td>\n",
+       "      <td>0.004343</td>\n",
+       "      <td>0.002404</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.002860</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.008427</td>\n",
+       "      <td>0.038363</td>\n",
+       "      <td>0.018817</td>\n",
+       "      <td>0.611253</td>\n",
+       "      <td>0.001754</td>\n",
+       "      <td>0.804422</td>\n",
+       "      <td>0.170530</td>\n",
+       "      <td>0.183060</td>\n",
+       "      <td>0.040816</td>\n",
+       "      <td>0.227397</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alabama-Blount</th>\n",
+       "      <td>0.005722</td>\n",
+       "      <td>0.005738</td>\n",
+       "      <td>0.005707</td>\n",
+       "      <td>0.086086</td>\n",
+       "      <td>0.880762</td>\n",
+       "      <td>0.017462</td>\n",
+       "      <td>0.003257</td>\n",
+       "      <td>0.002404</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.006970</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.012640</td>\n",
+       "      <td>0.010230</td>\n",
+       "      <td>0.061828</td>\n",
+       "      <td>0.767263</td>\n",
+       "      <td>0.004751</td>\n",
+       "      <td>0.892857</td>\n",
+       "      <td>0.127483</td>\n",
+       "      <td>0.114754</td>\n",
+       "      <td>0.040816</td>\n",
+       "      <td>0.210959</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 34 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 TotalPop       Men     Women  Hispanic     White     Black  \\\n",
+       "Alabama-Autauga  0.005475  0.005381  0.005566  0.026026  0.759519  0.215367   \n",
+       "Alabama-Baldwin  0.019411  0.019246  0.019572  0.045045  0.832665  0.110594   \n",
+       "Alabama-Barbour  0.002656  0.002904  0.002416  0.046046  0.462926  0.543655   \n",
+       "Alabama-Bibb     0.002225  0.002414  0.002042  0.022022  0.746493  0.249127   \n",
+       "Alabama-Blount   0.005722  0.005738  0.005707  0.086086  0.880762  0.017462   \n",
+       "\n",
+       "                   Native     Asian  Pacific   Citizen  ...      Walk  \\\n",
+       "Alabama-Autauga  0.004343  0.024038      0.0  0.006702  ...  0.007022   \n",
+       "Alabama-Baldwin  0.006515  0.016827      0.0  0.024393  ...  0.014045   \n",
+       "Alabama-Barbour  0.002172  0.009615      0.0  0.003393  ...  0.025281   \n",
+       "Alabama-Bibb     0.004343  0.002404      0.0  0.002860  ...  0.008427   \n",
+       "Alabama-Blount   0.003257  0.002404      0.0  0.006970  ...  0.012640   \n",
+       "\n",
+       "                 OtherTransp  WorkAtHome  MeanCommute  Employed  PrivateWork  \\\n",
+       "Alabama-Autauga     0.033248    0.048387     0.552430  0.005139     0.750000   \n",
+       "Alabama-Baldwin     0.035806    0.104839     0.549872  0.018507     0.884354   \n",
+       "Alabama-Barbour     0.038363    0.043011     0.491049  0.001819     0.719388   \n",
+       "Alabama-Bibb        0.038363    0.018817     0.611253  0.001754     0.804422   \n",
+       "Alabama-Blount      0.010230    0.061828     0.767263  0.004751     0.892857   \n",
+       "\n",
+       "                 PublicWork  SelfEmployed  FamilyWork  Unemployment  \n",
+       "Alabama-Autauga    0.250000      0.150273    0.000000      0.208219  \n",
+       "Alabama-Baldwin    0.107616      0.158470    0.040816      0.205479  \n",
+       "Alabama-Barbour    0.248344      0.199454    0.010204      0.482192  \n",
+       "Alabama-Bibb       0.170530      0.183060    0.040816      0.227397  \n",
+       "Alabama-Blount     0.127483      0.114754    0.040816      0.210959  \n",
+       "\n",
+       "[5 rows x 34 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
     "# scale numerical features into a normalized range, 0-1\n",
     "# store them in this dataframe\n",
-    "counties_scaled = None\n"
+    "\n",
+    "# Make sure all features are numerical (N/As were removed before)\n",
+    "condition = clean_counties_df[c].dtype in ['int64','float64']\n",
+    "assert all([condition for c in clean_counties_df.columns]) == True\n",
+    "\n",
+    "\n",
+    "scaler = MinMaxScaler()\n",
+    "scaler.fit(clean_counties_df)\n",
+    "\n",
+    "counties_scaled = scaler.transform(clean_counties_df)\n",
+    "counties_scaled = pd.DataFrame(counties_scaled, \n",
+    "                               index=clean_counties_df.index, \n",
+    "                               columns=clean_counties_df.columns)\n",
+    "counties_scaled.head()"
    ]
   },
   {
@@ -1510,15 +1730,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate the explained variance for the top n principal components\n",
     "# you may assume you have access to the global var N_COMPONENTS\n",
-    "def explained_variance(s, n_top_components):\n",
+    "def explained_variance(s:pd.DataFrame, n_top_components:int)->float:\n",
     "    '''Calculates the approx. data variance that n_top_components captures.\n",
     "       :param s: A dataframe of singular values for top components; \n",
     "           the top value is in the last row.\n",
