--- a/Population_Segmentation/Pop_Segmentation_Exercise.ipynb
+++ b/Population_Segmentation/Pop_Segmentation_Exercise.ipynb
@@ -3140,9 +3140,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_mxnet_p36",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_mxnet_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3154,7 +3154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.10"
   },
   "nbpresent": {
    "slides": {
