--- a/Population_Segmentation/Pop_Segmentation_Solution.ipynb
+++ b/Population_Segmentation/Pop_Segmentation_Solution.ipynb
@@ -3921,9 +3921,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ai]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ai-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3935,7 +3935,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.8.10"
   },
   "nbpresent": {
    "slides": {
