--- a/Payment_Fraud_Detection/Fraud_Detection_Exercise.ipynb
+++ b/Payment_Fraud_Detection/Fraud_Detection_Exercise.ipynb
@@ -74,13 +74,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kernel_name = None"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "// If you're running this on SageMaker, \n",
+       "// make sure using the correct kernel for mxnet\n",
+       "\n",
+       "var kernel = Jupyter.notebook.kernel\n",
+       "kernel.execute('kernel_name = ' + '\"' + kernel.name + '\"')\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%javascript\n",
+    "\n",
+    "// If you're running this on SageMaker, \n",
+    "// make sure using the correct kernel for mxnet\n",
+    "\n",
+    "var kernel = Jupyter.notebook.kernel\n",
+    "kernel.execute('kernel_name = ' + '\"' + kernel.name + '\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'conda_mxnet_p36'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kernel_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# sagemaker session, role\n",
     "sagemaker_session = sagemaker.Session()\n",
-    "#role = sagemaker.get_execution_role()\n",
+    "\n",
+    "if kernel_name:\n",
+    "    role = sagemaker.get_execution_role()\n",
     "\n",
     "# S3 bucket name\n",
     "bucket = sagemaker_session.default_bucket()"
@@ -99,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +381,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1141,9 +1205,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_mxnet_p36",
    "language": "python",
-   "name": "python3"
+   "name": "conda_mxnet_p36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1155,7 +1219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.6.13"
   },
   "notice": "None."
  },
