cleanup engineering & prep training

--- a/Project_Plagiarism_Detection/3_Training_a_Model.ipynb
+++ b/Project_Plagiarism_Detection/3_Training_a_Model.ipynb
@@ -38,23 +38,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import boto3\n",
-    "import sagemaker"
+    "import sagemaker\n",
+    "from sys import platform"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Working locally\n",
+    "if platform == 'darwin':\n",
+    "    role = !aws iam get-role --role-name \"AmazonSageMaker-ExecutionRole-20210808T134525\" | jq '.Role.Arn'\n",
+    "    role = role[0].replace(\"\\\"\",\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -62,7 +71,9 @@
     "\"\"\"\n",
     "# session and role\n",
     "sagemaker_session = sagemaker.Session()\n",
-    "role = sagemaker.get_execution_role()\n",
+    "\n",
+    "if platform != 'darwin':\n",
+    "    role = sagemaker.get_execution_role()\n",
     "\n",
     "# create an S3 bucket\n",
     "bucket = sagemaker_session.default_bucket()"
@@ -81,19 +92,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# should be the name of directory you created to save your features data\n",
-    "data_dir = None\n",
+    "data_dir = \"plagiarism_data\"\n",
     "\n",
     "# set prefix, a descriptive name for a directory  \n",
-    "prefix = None\n",
+    "prefix = \"project_plagiarism\"\n",
     "\n",
-    "# upload all data to S3\n"
+    "# upload all data to S3\n",
+    "s3_data = sagemaker_session.upload_data(path=data_dir, bucket=bucket, key_prefix=prefix)"
    ]
   },
   {
@@ -107,11 +117,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "project_plagiarism/test.csv\n",
+      "project_plagiarism/train.csv\n",
+      "Test passed!\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -119,8 +137,9 @@
     "# confirm that data is in S3 bucket\n",
     "empty_check = []\n",
     "for obj in boto3.resource('s3').Bucket(bucket).objects.all():\n",
-    "    empty_check.append(obj.key)\n",
-    "    print(obj.key)\n",
+    "    if obj.key.__contains__(\"project_plagiarism\"):\n",
+    "        empty_check.append(obj.key)\n",
+    "        print(obj.key)\n",
     "\n",
     "assert len(empty_check) !=0, 'S3 bucket is empty.'\n",
     "print('Test passed!')"
@@ -480,9 +499,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_p36",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_pytorch_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -494,7 +513,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
